--- a/styles/styles.css
+++ b/styles/styles.css
@@ -711,9 +711,11 @@ a {
   text-decoration: none;
 
   display: block;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: box-shadow;
+
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
   transition-duration: 250ms;
-  
 }
 
 .post-link:hover {
@@ -960,7 +962,7 @@ li {
   background-color: #2196f3;
 }
 
- .join-text {
+.join-text {
   font-family: Roboto;
   font-size: 14px;
   font-weight: 700;
@@ -977,41 +979,35 @@ li {
 }
 .postext-hover {
   content: '';
-  display: block;
   position: absolute;
-  top: 0;
-  left: 0;
+  background-color: rgba(33, 150, 243, 0.9);
+  padding: 63px 23px;
+  font-size: 18px;
+  line-height: 1.55;
+  letter-spacing: 00.03em;
+  color: var(--white-color);
   width: 100%;
   height: 100%;
-  background-color: rgba(33, 150, 243, 0.9);
-  padding-top: 63px;
-  padding-bottom: 63px;
-  padding-left: 24px;
-  padding-right: 24px;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 1.6;
-  text-align: left;
-  color: #ffffff;
+  bottom: 0;
+  right: 0;
   transform: translateY(100%);
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 250ms;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms;
+  opacity: 0 cubic-bezier(0.4, 0, 0.2, 1);
 }
-.overlay-blok::before {
-  display: inline-block;
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%px;
-  background-color: rgba(33, 150, 243, 0.9);
-  opacity: 0;
-  transform: translateY(100%);
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 250ms;
-  opacity: 0;
-} 
+/* .action {
+  position: relative;
+  overflow: hidden;
+} */
+.overlay-block {
+  position: relative;
+  display: block;
+  overflow: hidden;
+}
+.post-link:hover .overlay-block,
+.post-link:focus .overlay-block {
+  transform: translateY(-100%);
+  opacity: 1;
+}
 
 .do-thumb {
   /* position: absolute; */
@@ -1043,3 +1039,20 @@ li {
   bottom: 0;
   width: 100%;
 }
+/* .overlay-text{
+  content: '';
+  position: absolute;
+  background-color: rgba(33, 150, 243, 0.9);
+  padding: 63px 23px;
+font-size: 18px;
+line-height: 1.55;
+letter-spacing: 00.03em;
+color: var(--white-color);
+  width: 100%;
+  height: 100%;
+  bottom: 0;
+  right: 0;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms;
+  opacity: 0 cubic-bezier(0.4, 0, 0.2, 1);
+} */
